@@ -25,7 +25,9 @@ import com.guardtime.ksi.blocksigner.IdentityMetadata;
 import com.guardtime.ksi.hashing.DataHash;
 import com.guardtime.ksi.hashing.DataHasher;
 import com.guardtime.ksi.hashing.HashAlgorithm;
+import com.guardtime.ksi.util.Base16;
 import com.guardtime.ksi.util.Util;
+
 import org.testng.Assert;
 import org.testng.annotations.Test;
 
@@ -101,9 +103,16 @@ public class BlindingMaskLinkingHashTreeBuilderTest {
         new BlindingMaskLinkingHashTreeBuilder(HashAlgorithm.SHA2_256,null, AbstractBlockSignatureTest.DATA_HASH_2);
     }
 
-    @Test(expectedExceptions = IllegalArgumentException.class, expectedExceptionsMessageRegExp = "Initialization vector should be as long as the output of the hash algorithm")
-    public void testCreateTreeBuilderUsingInitializationVectorWithInvalidLength() {
-        new BlindingMaskLinkingHashTreeBuilder(HashAlgorithm.SHA2_256,new byte[16], AbstractBlockSignatureTest.DATA_HASH_2);
+    @Test
+    public void testUseTreeBuilderUsingInitializationVectorWithShortLength() {
+        BlindingMaskLinkingHashTreeBuilder builder = new BlindingMaskLinkingHashTreeBuilder(HashAlgorithm.SHA2_256, new byte[16], DATA_HASH_2);
+        addAndBuild(builder, Base16.decode("01A0AA9C6859E051A6224EC3F2B65B1ACC7A6C2EA2EBFB83AD1E52BCADB3E1552B"));
+    }
+
+    @Test
+    public void testUseTreeBuilderUsingInitializationVectorWithLongLength() {
+        BlindingMaskLinkingHashTreeBuilder builder = new BlindingMaskLinkingHashTreeBuilder(HashAlgorithm.SHA2_256, new byte[200], DATA_HASH_2);
+        addAndBuild(builder, Base16.decode("018D80F90876630372C2537FEE55C1E7375B5133F3CD9CCEBA6C140FAA2F532B91"));
     }
 
     @Test(expectedExceptions = NullPointerException.class, expectedExceptionsMessageRegExp = "Node can not be null")
@@ -128,4 +137,12 @@ public class BlindingMaskLinkingHashTreeBuilderTest {
         return new BlindingMaskLinkingHashTreeBuilder(INITIALIZATION_VECTOR);
     }
 
+    private void addAndBuild(BlindingMaskLinkingHashTreeBuilder builder, byte[] expectedRootHash) {
+        for (int i = 0; i < 4; i++) {
+            builder.add(new ImprintNode(DATA_HASH_2));
+        }
+        ImprintNode root = builder.build();
+        Assert.assertEquals(root.getLevel(), 3L, "Root level does not match with expected level.");
+        Assert.assertEquals(root.getValue(), expectedRootHash, "Root hash does not match with expected hash.");
+    }
 }
