@@ -1,4 +1,5 @@
 Version 4.14
+* IMPROVEMENT: BlindingMaskLinkingHashTreeBuilder no longer throws exception but instead logs warning if IV is shorter than the output of the hash algorithm.
 
 2019-04-18 4.14.193
 
